dateset/carina-main/charts/carina-csi-driver_templates_mutatingwebhooks_29.yaml
# Source: carina-csi-driver/templates/mutatingwebhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-hook
  namespace: default
webhooks:
  - name: pod-hook.carina.storage.io
    namespaceSelector:
      matchExpressions:
      - key: carina.storage.io/webhook
        operator: NotIn
        values: ["ignore"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lRT2dWRks4WHVjTERxNWdqZ2lYd0t3akFOQmdrcWhraUc5dzBCQVFzRkFEQVYKTVJNd0VRWURWUVFERXdwemRtTXRZMkYwTFdOaE1CNFhEVEkwTURRd01qQXlOVFF6TmxvWERUTTBNRE16TVRBeQpOVFF6Tmxvd0ZURVRNQkVHQTFVRUF4TUtjM1pqTFdOaGRDMWpZVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBT09LT3J0OThVR2daZk5KcEhtOC9Nb2RrVys5Y3N5aEJWTDhnMU11eUNEcHRwaGoKZ0YzNytTTVMrL3hxQmY0Qk1TWGhQYStBK1FFb1FoV3QvZkRRc3k5WHhZdVVUajhSZjhUOTg0NndpTUFEZW9pRgpoRzBYdUs5bTFt [...]
      service:
        name: my-release-controller
        namespace: default
        path: /pod/mutate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: NoneOnDryRun
    timeoutSeconds: 30
